--- a/Assets/UI/Uss/menu-buttton.uss
+++ b/Assets/UI/Uss/menu-buttton.uss
@@ -16,3 +16,15 @@
 .game-title {
     font-size: 30px;
 }
+
+.menu-button:hover {
+    scale: 1.05 1.05;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+}
+
+.menu-button:active {
+    background-color: rgb(117, 245, 153);
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+}
