--- a/Assets/UI/Uss/action-button.uss
+++ b/Assets/UI/Uss/action-button.uss
@@ -5,4 +5,9 @@
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     align-self: center;
+    transition-timing-function: ease-in-out;
+}
+
+.action-buttons:hover {
+    scale: 1.05 1.05;
 }
