--- a/Assets/UI/Uxml/UIScreens.uxml
+++ b/Assets/UI/Uxml/UIScreens.uxml
@@ -2,7 +2,7 @@
     <ui:Template name="MainMenuScreen" src="project://database/Assets/UI/Uxml/MainMenuScreen.uxml?fileID=9197481963319205126&amp;guid=a800ae6eea45c5b459f159b9089c8ae3&amp;type=3#MainMenuScreen" />
     <ui:Template name="SettingsScreen" src="project://database/Assets/UI/Uxml/SettingsScreen.uxml?fileID=9197481963319205126&amp;guid=21a275f26c182984ea3e67fcf97f3f77&amp;type=3#SettingsScreen" />
     <ui:Template name="PauseScreen" src="project://database/Assets/UI/Uxml/PauseScreen.uxml?fileID=9197481963319205126&amp;guid=807b287d7f08efe43aa0f538cae5e094&amp;type=3#PauseScreen" />
-    <ui:Instance template="MainMenuScreen" name="MainMenuScreen" style="display: flex;" />
-    <ui:Instance template="SettingsScreen" name="SettingsScreen" style="flex-shrink: 1; flex-grow: 1; display: flex; justify-content: flex-start; align-self: auto;" />
-    <ui:Instance template="PauseScreen" name="PauseScreen" style="align-self: center; justify-content: space-around; align-items: stretch; flex-grow: 0; width: 50%; height: 50%; flex-shrink: 0; translate: 0 0; -unity-text-align: upper-left; flex-direction: column;" />
+    <ui:Instance template="MainMenuScreen" name="MainMenuScreen" style="display: none;" />
+    <ui:Instance template="SettingsScreen" name="SettingsScreen" style="flex-shrink: 1; flex-grow: 1; display: none; justify-content: flex-start; align-self: auto;" />
+    <ui:Instance template="PauseScreen" name="PauseScreen" style="align-self: center; justify-content: space-around; align-items: stretch; flex-grow: 0; width: 100%; height: 100%; flex-shrink: 0; translate: 0 0; -unity-text-align: upper-left; flex-direction: column;" />
 </ui:UXML>
