--- a/Assets/UI/Uxml/UIScreens.uxml
+++ b/Assets/UI/Uxml/UIScreens.uxml
@@ -4,9 +4,11 @@
     <ui:Template name="PauseScreen" src="project://database/Assets/UI/Uxml/PauseScreen.uxml?fileID=9197481963319205126&amp;guid=807b287d7f08efe43aa0f538cae5e094&amp;type=3#PauseScreen" />
     <ui:Template name="LevelFinishScreen" src="project://database/Assets/UI/Uxml/LevelFinishScreen.uxml?fileID=9197481963319205126&amp;guid=583a15a3aff269f4c81366a075d83d88&amp;type=3#LevelFinishScreen" />
     <ui:Template name="LevelSelectScreen" src="project://database/Assets/UI/Uxml/LevelSelectScreen.uxml?fileID=9197481963319205126&amp;guid=27346e396f7d4474b8fb573166c0a418&amp;type=3#LevelSelectScreen" />
+    <ui:Template name="DungeonGameOverScreen" src="project://database/Assets/UI/Uxml/DungeonGameOverScreen.uxml?fileID=9197481963319205126&amp;guid=370dddf70cab0aa449ec5db1b35dca43&amp;type=3#DungeonGameOverScreen" />
     <ui:Instance template="MainMenuScreen" name="MainMenuScreen" style="display: flex;" />
     <ui:Instance template="SettingsScreen" name="SettingsScreen" style="flex-shrink: 1; flex-grow: 1; display: flex; justify-content: flex-start; align-self: auto;" />
     <ui:Instance template="PauseScreen" name="PauseScreen" style="align-self: center; justify-content: space-around; align-items: stretch; flex-grow: 0; width: 100%; height: 100%; flex-shrink: 0; translate: 0 0; -unity-text-align: upper-left; flex-direction: column; display: flex;" />
     <ui:Instance template="LevelFinishScreen" name="LevelFinishScreen" style="display: flex; flex-grow: 1; flex-shrink: 1; align-self: auto; justify-content: space-around;" />
-    <ui:Instance template="LevelSelectScreen" name="LevelSelectScreen" />
+    <ui:Instance template="LevelSelectScreen" name="LevelSelectScreen" style="display: flex;" />
+    <ui:Instance template="DungeonGameOverScreen" name="DungeonGameOverScreen" style="justify-content: flex-start; align-items: stretch; align-self: auto; flex-shrink: 0; flex-grow: 1;" />
 </ui:UXML>
