--- a/Assets/UI/Uxml/MainMenuScreen.uxml
+++ b/Assets/UI/Uxml/MainMenuScreen.uxml
@@ -4,6 +4,7 @@
     <ui:VisualElement name="main-menu-body-container" style="flex-grow: 0; flex-direction: row; justify-content: flex-start; flex-wrap: nowrap; flex-shrink: 0; align-self: auto; align-items: stretch; margin-top: 15%; width: 100%; height: 100%;">
         <ui:VisualElement name="player-child-image" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Pixel%20Adventure%201/Assets/Main%20Characters/Virtual%20Guy/Run%20(32x32).png?fileID=-2419971920513260168&amp;guid=552146dbb8bac6f449493bca4b69540f&amp;type=3#Run (32x32)_7&apos;); align-self: auto; width: 50%; height: 50%;" />
         <ui:VisualElement name="main-menu-buttons-container" style="flex-grow: 1; justify-content: flex-start; align-self: center; width: 100%; height: 50%; align-items: auto; margin-right: 0; margin-left: 0; flex-shrink: 1; top: -20%;">
+            <ui:Button text="Ready" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ready-button" class="menu-button" />
             <ui:Button text="Start Puzzles" parse-escape-sequences="true" display-tooltip-when-elided="true" name="start-button" class="menu-button" />
             <ui:Button text="Level select" parse-escape-sequences="true" display-tooltip-when-elided="true" name="level-select-button" class="menu-button" />
             <ui:Button text="Start Dungeons" parse-escape-sequences="true" display-tooltip-when-elided="true" name="start-button-dungeon" class="menu-button" />
