--- a/Assets/UI/Uxml/UIScreens.uxml
+++ b/Assets/UI/Uxml/UIScreens.uxml
@@ -12,7 +12,7 @@
     <ui:Instance template="SettingsScreen" name="SettingsScreen" style="flex-shrink: 1; flex-grow: 1; display: none; justify-content: flex-start; align-self: auto;" />
     <ui:Instance template="PauseScreen" name="PauseScreen" style="align-self: center; justify-content: space-around; align-items: stretch; flex-grow: 0; width: 100%; height: 100%; flex-shrink: 0; translate: 0 0; -unity-text-align: upper-left; flex-direction: column; display: none;" />
     <ui:Instance template="LevelFinishScreen" name="LevelFinishScreen" style="display: none; flex-grow: 1; flex-shrink: 1; align-self: auto; justify-content: space-around;" />
-    <ui:Instance template="LevelSelectScreen" name="LevelSelectScreen" style="display: none;" />
+    <ui:Instance template="LevelSelectScreen" name="LevelSelectScreen" style="display: none; flex-grow: 1;" />
     <ui:Instance template="DungeonGameOverScreen" name="DungeonGameOverScreen" style="justify-content: flex-start; align-items: stretch; align-self: auto; flex-shrink: 0; flex-grow: 1; display: none;" />
     <ui:Instance template="WaitingForPlayersScreen" name="WaitingForPlayersScreen" style="display: none; flex-grow: 1;" />
 </ui:UXML>
